agregando integrantes con cartas de boostrap a la pagina historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -97,152 +97,109 @@
         <main>
             <!-- Titulo Historia -->
             <h2 class="titulo-principal">HISTORIA</h2>
-            <h2 class="subtitulo-principal">Línea de tiempo</h2>
-            <div class="timeline">
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">Formación de la banda</h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(1976-1977)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        La historia de Patricio Rey y sus Redonditos de Ricota
-                        comienza entre 1976 y 1977 en la ciudad de La Plata. La
-                        banda fue formada por Carlos "Indio" Solari, Skay
-                        Beilinson y la Negra Poli, quien además de ser parte
-                        fundamental del grupo, asumió el rol de mánager. Desde
-                        el inicio, el concepto de "Patricio Rey" funcionó como
-                        un personaje ficticio, casi místico, que representaba un
-                        espíritu colectivo más que una figura real, reforzando
-                        la idea de que el protagonismo era de la música y del
-                        público, no de las individualidades.
-                    </p>
-                </article>
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">
-                        Primeros años y espectáculos teatrales
-                    </h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(1978-1982)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        En sus primeros años, entre 1978 y 1982, los Redondos no
-                        eran solo una banda de rock, sino un espectáculo
-                        artístico en el que combinaban música, teatro y
-                        performances cargadas de ironía y bizarra creatividad.
-                        Sus shows en pequeños bares de La Plata y Buenos Aires
-                        se caracterizaban por su estilo independiente y
-                        contracultural, lejos de los medios masivos. A medida
-                        que la situación política del país cambiaba, sobre todo
-                        con el fin de la dictadura en 1982, el grupo fue dejando
-                        de lado las puestas teatrales para concentrarse cada vez
-                        más en la música.
-                    </p>
-                </article>
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">
-                        Primer disco y consolidación
-                    </h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(1984-1989)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        El gran salto musical llegó en 1984 con el lanzamiento
-                        de su primer álbum, Gulp!. Este disco contenía canciones
-                        que se convertirían en himnos como La bestia pop y
-                        Barbazul versus el amor letal, mostrando un sonido
-                        fresco y letras cargadas de poesía y simbolismo. Dos
-                        años después, en 1986, lanzaron Oktubre, un álbum más
-                        oscuro y politizado, con clásicos como Semen-up y Preso
-                        en mi ciudad. Durante esta etapa, los Redondos se
-                        consolidaron como una banda de culto, manteniendo un
-                        fuerte rechazo hacia los medios tradicionales y
-                        apostando por una relación directa con sus seguidores,
-                        lo que les otorgó una mística única.
-                    </p>
-                </article>
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">El estallido masivo</h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(1990-1997)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        La década del 90 marcó el verdadero estallido masivo de
-                        la banda. En 1991 publicaron ¡Bang! ¡Bang! Estás
-                        liquidado, que los llevó a una popularidad aún mayor.
-                        Luego, en 1993, lanzaron el álbum doble Lobo Suelto,
-                        Cordero Atado (volúmenes 1 y 2), donde profundizaron en
-                        su complejidad musical y lírica. Hacia 1996, con
-                        Luzbelito, los Redondos reafirmaron su lugar como una de
-                        las bandas más influyentes del rock argentino. En esta
-                        etapa, sus recitales comenzaron a atraer multitudes cada
-                        vez más grandes, y aunque nunca contaron con difusión
-                        masiva, su fama creció gracias al boca a boca y la
-                        devoción de sus seguidores.
-                    </p>
-                </article>
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">
-                        Consagración y últimos años
-                    </h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(1998-2001)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        Entre 1998 y 2001, la banda alcanzó el pico de su éxito
-                        popular. En 1998 editaron Último Bondi a Finisterre, un
-                        disco experimental con influencias electrónicas que
-                        sorprendió a muchos. Dos años después, en el 2000,
-                        lanzaron Momo Sampler, su último álbum de estudio. Los
-                        shows masivos se volvieron un fenómeno único, con
-                        recitales históricos como el de River Plate en 1998 y
-                        presentaciones en Córdoba y Mar del Plata. Cada
-                        concierto era una celebración casi mística, con miles de
-                        fanáticos que viajaban desde distintos puntos del país.
-                    </p>
-                </article>
-                <!-- Línea -->
-                <div class="timeline-line"></div>
-                <!-- Tarjeta -->
-                <article class="timeline-content">
-                    <!-- Título tarjeta -->
-                    <h3 class="timeline-card-title">Separación</h3>
-                    <!-- Año tarjeta -->
-                    <h4 class="timeline-card-year">(2001)</h4>
-                    <!-- Texto tarjeta -->
-                    <p class="timeline-card-text">
-                        Finalmente, en 2001, tras un recital en Córdoba,
-                        Patricio Rey y sus Redonditos de Ricota decidieron
-                        separarse. Aunque nunca hubo un anuncio oficial o una
-                        despedida formal, las diferencias entre el Indio Solari
-                        y Skay Beilinson, sumadas a desacuerdos sobre el rumbo
-                        del grupo y el manejo de su creciente popularidad,
-                        marcaron el fin de una era. La disolución dejó un halo
-                        de misterio, fiel al estilo de la banda, y los Redondos
-                        pasaron a convertirse en leyenda, con una obra que sigue
-                        resonando en el corazón de sus seguidores hasta el día
-                        de hoy.
-                    </p>
-                </article>
+            <!-- Subtitulo Línea del tiempo -->
+            <div class="historia_grid">
+                <!-- Cartas Integrantes -->
+                <section class="historia_cards">
+                    <h2 class="subtitulo-principal">Integrantes</h2>
+                    <div class="card-group">
+                        <!-- Carta Indio Solari -->
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/indio-solari-joven.jpg"
+                                class="card-img-top"
+                                alt="indio-solari"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Carlos Alberto Solari "Indio Solari"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Voz</p>
+                            </div>
+                        </div>
+                        <!-- Carta Skay Beilinson -->
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/skay-beilinson.jpg"
+                                class="card-img-top"
+                                alt="skay-beilinson"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Eduardo Federico Beilinson "Skay Beilinson"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                        <!-- Carta Sergio Dawi -->
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/sergio-dawi.jpg"
+                                class="card-img-top"
+                                alt="indio-solari"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Sergio Dawi</h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Saxofón</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-group">
+                        <!-- Carta Semilla Bucciarelli -->
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/semilla-bucciarelli.jpg"
+                                class="card-img-top"
+                                alt="semilla-bucciarelli"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Daniel Fernando Bucciarelli "Semilla
+                                    Bucciarelli"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Bajo</p>
+                            </div>
+                        </div>
+                        <!-- Carta Walter Sidotti -->
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/walter-sidotti.jpg"
+                                class="card-img-top"
+                                alt="walter-sidotti"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">Walter Sidotti</h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Batería</p>
+                            </div>
+                        </div>
+                        <div class="card text-bg-dark">
+                            <img
+                                src="../assets/img/willy-crook.jpg"
+                                class="card-img-top"
+                                alt="willy-crook"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Eduardo Guillermo Crook Pantano "Willy
+                                    Crook"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Saxofón</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
         <footer>
