--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
                                     Inicio</a
                                 >
                             </li>
-                            <!-- Historia -->
+                            <!-- Biografía -->
                             <li class="nav-item">
-                                <a class="nav-link" href="./pages/historia.html"
-                                    >Historia</a
+                                <a
+                                    class="nav-link"
+                                    href="./pages/biografia.html"
+                                    >Biografía</a
                                 >
                             </li>
                             <!-- Recitales -->
@@ -113,11 +115,11 @@
             </h1>
             <!-- Cartas -->
             <section class="index-links">
-                <!-- Carta Historia -->
+                <!-- Carta Biografía -->
                 <article>
-                    <!-- Link Historia -->
-                    <a class="items-cards" href="./pages/historia.html"
-                        ><span class="index-text-cards">Historia</span></a
+                    <!-- Link Biografía -->
+                    <a class="items-cards" href="./pages/biografia.html"
+                        ><span class="index-text-cards">Biografía</span></a
                     >
                 </article>
                 <!-- Carta Recitales -->
