--- a/pages/recitales.html
+++ b/pages/recitales.html
@@ -65,10 +65,10 @@
                                     Inicio</a
                                 >
                             </li>
-                            <!-- Historia -->
+                            <!-- Biografía -->
                             <li class="nav-item">
-                                <a class="nav-link" href="./historia.html"
-                                    >Historia</a
+                                <a class="nav-link" href="./biografia.html"
+                                    >Biografía</a
                                 >
                             </li>
                             <!-- Recitales -->
