agregando los integrantes faltantes a biografia

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -112,6 +112,7 @@
                     <h5 class="indice-card-title">Otros</h5>
                 </a>
             </section>
+            <div class="linea-degrade"></div>
             <div class="integrantes_bg" id="integrantes">
                 <!-- Cartas Integrantes -->
                 <section class="integrantes_cards">
@@ -151,6 +152,26 @@
                                 <p class="card-text">Guitarra</p>
                             </div>
                         </div>
+                        <!-- Carta Negra Poli -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/negra-poli.jpg"
+                                class="card-img-top"
+                                alt="negra-poli"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Carmen Castro "La Negra Poli"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Representante</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin grupo 1 -->
+                    <!-- Inicio grupo 2 -->
+                    <div class="card-group">
                         <!-- Carta Sergio Dawi -->
                         <div class="integrantes-card card text-bg-dark">
                             <img
@@ -165,10 +186,6 @@
                                 <p class="card-text">Saxofón</p>
                             </div>
                         </div>
-                    </div>
-                    <!-- Fin grupo 1 -->
-                    <!-- Inicio grupo 2 -->
-                    <div class="card-group">
                         <!-- Carta Semilla Bucciarelli -->
                         <div class="integrantes-card card text-bg-dark">
                             <img
@@ -198,23 +215,6 @@
                             </div>
                             <div class="card-footer">
                                 <p class="card-text">Batería</p>
-                            </div>
-                        </div>
-                        <!-- Carta Willy Crook -->
-                        <div class="integrantes-card card text-bg-dark">
-                            <img
-                                src="../assets/img/willy-crook.jpg"
-                                class="card-img-top"
-                                alt="willy-crook"
-                            />
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Eduardo Guillermo Crook Pantano "Willy
-                                    Crook"
-                                </h5>
-                            </div>
-                            <div class="card-footer">
-                                <p class="card-text">Saxofón</p>
                             </div>
                         </div>
                         <!-- Fin grupo 2 -->
@@ -223,37 +223,6 @@
                     <!-- Fin Grupo 2 -->
                     <!-- Inicio Grupo 3 -->
                     <div class="card-group">
-                        <!-- Carta Semilla Bucciarelli -->
-                        <div class="integrantes-card card text-bg-dark">
-                            <img
-                                src="../assets/img/semilla-bucciarelli.jpg"
-                                class="card-img-top"
-                                alt="semilla-bucciarelli"
-                            />
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    Daniel Fernando Bucciarelli "Semilla
-                                    Bucciarelli"
-                                </h5>
-                            </div>
-                            <div class="card-footer">
-                                <p class="card-text">Bajo</p>
-                            </div>
-                        </div>
-                        <!-- Carta Walter Sidotti -->
-                        <div class="integrantes-card card text-bg-dark">
-                            <img
-                                src="../assets/img/walter-sidotti.jpg"
-                                class="card-img-top"
-                                alt="walter-sidotti"
-                            />
-                            <div class="card-body">
-                                <h5 class="card-title">Walter Sidotti</h5>
-                            </div>
-                            <div class="card-footer">
-                                <p class="card-text">Batería</p>
-                            </div>
-                        </div>
                         <!-- Carta Willy Crook -->
                         <div class="integrantes-card card text-bg-dark">
                             <img
@@ -271,8 +240,145 @@
                                 <p class="card-text">Saxofón</p>
                             </div>
                         </div>
+                        <!-- Carta Conejo Jolivet -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/Conejo-jolivet.jpg"
+                                class="card-img-top"
+                                alt="conejo-jolivet"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Jean Gabriel Jolivet "Conejo Jolivet"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                        <!-- Carta Tito Fargo -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/tito-fargo.jpg"
+                                class="card-img-top"
+                                alt="tito-fargo"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Héctor D’ Aviero "Tito Fargo"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
                     </div>
                     <!-- Fin Grupo 3 -->
+                    <!-- Inicio Grupo 4 -->
+                    <div class="card-group">
+                        <!-- Carta Piojo Abalos -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/piojo-abalos.jpg"
+                                class="card-img-top"
+                                alt="piojo-abalos"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Juan Abalos "Piojo Abalos"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Batería</p>
+                            </div>
+                        </div>
+                        <!-- Carta Conejo Jolivet -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/Conejo-jolivet.jpg"
+                                class="card-img-top"
+                                alt="conejo-jolivet"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Jean Gabriel Jolivet "Conejo Jolivet"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                        <!-- Carta Tito Fargo -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/tito-fargo.jpg"
+                                class="card-img-top"
+                                alt="tito-fargo"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Héctor D’ Aviero "Tito Fargo"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin Grupo 4 -->
+                    <!-- Inicio Grupo 5 -->
+                    <div class="card-group">
+                        <!-- Carta Willy Crook -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/willy-crook.jpg"
+                                class="card-img-top"
+                                alt="willy-crook"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Eduardo Guillermo Crook Pantano "Willy
+                                    Crook"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Saxofón</p>
+                            </div>
+                        </div>
+                        <!-- Carta Conejo Jolivet -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/Conejo-jolivet.jpg"
+                                class="card-img-top"
+                                alt="conejo-jolivet"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Jean Gabriel Jolivet "Conejo Jolivet"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                        <!-- Carta Tito Fargo -->
+                        <div class="integrantes-card card text-bg-dark">
+                            <img
+                                src="../assets/img/tito-fargo.jpg"
+                                class="card-img-top"
+                                alt="tito-fargo"
+                            />
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    Héctor D’ Aviero "Tito Fargo"
+                                </h5>
+                            </div>
+                            <div class="card-footer">
+                                <p class="card-text">Guitarra</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fin Grupo 5 -->
                 </section>
             </div>
         </main>
